--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "name": "ROVER_ROBOCON",
     "description": "Mục mở rộng các khối lệnh dành cho thi đấu Robocon dành cho bộ kit xe điều khiển Rover",
     "libs": [
-        "robot.py"
+        "robocon.py"
     ],
     "blocks": [
         "definition.js"
